update display fct with toExponential function which allows to display exponential version of big numbers which fix the display overflow problem

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 * {
     box-sizing: border-box;
 }
@@ -37,7 +39,7 @@ body {
     border-radius: 10px;
     text-align: end;
     font-size: larger;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: monospace;
     display: flex;
     flex-direction: column;
     gap: 5px;
@@ -46,10 +48,11 @@ body {
 
 .lowerDisplay {
     /* border: 1px solid black; */
-    font-size: 18px;
+    font-size: 2.5rem;
     margin-top: 5px;
     white-space: nowrap;
     overflow: hidden;
+    max-inline-size: 10ch;
 
 }
 
@@ -63,7 +66,7 @@ body {
     height: 25px;
     overflow: hidden;
     /* width: px; */
-    font-size: 16px;
+    font-size: 1rem;
     white-space: nowrap;
 }
 
